[package]
name = "essi-ffmpeg"
description = "An easy to use FFmpeg CLI wrapper"
authors = ["Adhitya Rimba <adhityarimba@gmail.com>"]
keywords = ["essi", "easy", "ffmpeg", "cli", "wrapper"]
categories = ["multimedia"]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/MrAdhit/essi-ffmpeg"
readme = "README.md"
license-file = "LICENSE"
exclude = ["examples/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
flate2 = "1.0.28"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = "0.11.24"
tokio = { version = "1.36.0", features = ["full"] }
