[package]
name = "essi-ffmpeg"
description = "An easy to use FFmpeg CLI wrapper"
authors = ["Adhitya Rimba <adhityarimba@gmail.com>"]
keywords = ["essi", "easy", "ffmpeg", "cli", "wrapper"]
categories = ["multimedia"]
version = "0.3.0"
edition = "2021"
repository = "https://github.com/MrAdhit/essi-ffmpeg"
readme = "README.md"
license-file = "LICENSE"
exclude = ["examples/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
flate2 = "1.0.28"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.11.24", default-features = false }
tokio = { version = "1.36.0", features = ["full"] }

[features]
default = ["reqwest/default-tls"]
# Enable rustls for TLS support
rustls = ["reqwest/rustls-tls-native-roots"]
# Enable rustls and webpki-roots
rustls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
# Enable native-tls for TLS support
native-tls = ["reqwest/native-tls"]
# Remove dependency on OpenSSL
native-tls-vendored = ["reqwest/native-tls-vendored"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2"
winapi = "0.2"
